--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "dotenv": "^16.5.0",
     "drizzle-orm": "^0.43.1",
     "embla-carousel-react": "^8.6.0",
+    "framer-motion": "^12.23.22",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.544.0",
     "nanoid": "^5.1.6",
